crates/cockpitctl-domain-signing/tests/snapshots/snapshot_tests__signed_policy_different_key.snap
---
source: crates/cockpitctl-domain-signing/tests/snapshot_tests.rs
expression: evidence
---
{
  "schema": "cockpit.policy_signature.v1",
  "algorithm": "hmac_sha256",
  "policy_sha256": "4b964c735ae15fddcfebf580f4eb099d74e240a151982feb0a545e171e06d0d6",
  "signature": "de5a67955b5ac0dfca2c9116e17c8df5ed6dc718bb134f3437ed4b34fc9db238",
  "key_id": "key-v2"
}
