crates/cockpitctl-domain-signing/tests/snapshots/snapshot_tests__signed_policy_no_key_id.snap
---
source: crates/cockpitctl-domain-signing/tests/snapshot_tests.rs
expression: evidence
---
{
  "schema": "cockpit.policy_signature.v1",
  "algorithm": "hmac_sha256",
  "policy_sha256": "4b964c735ae15fddcfebf580f4eb099d74e240a151982feb0a545e171e06d0d6",
  "signature": "4c19a2dcbfee627f1f312276fc3353bd8b1a7a6262f1026157622fe6bc2c1e08"
}
