crates/cockpitctl-domain-signing/tests/snapshots/snapshot_tests__signed_policy_via_dispatch.snap
---
source: crates/cockpitctl-domain-signing/tests/snapshot_tests.rs
expression: evidence
---
{
  "schema": "cockpit.policy_signature.v1",
  "algorithm": "hmac_sha256",
  "policy_sha256": "4b964c735ae15fddcfebf580f4eb099d74e240a151982feb0a545e171e06d0d6",
  "signature": "c5f95a613cd558543dc7b4122ea0812dfdc95baf7a4c0d2722c5ebc38d7998fb",
  "key_id": "dispatch-v1"
}
